# evalipy

./: LICENSE  README.MD  pyproject.toml  requirements.txt
evalipy/: __init__.py  comparator.py  metrics.py  model.py  report.py
src/evalipy/: comparator.py  metrics.py  model.py  report.py
tests/: comp_test.py  evalipy_test.py  imp_test.py
